style.css
:root {
  font-family: system-ui, sans-serif;
  font-size: 1rem;
}

body {
  background: hsl(200, 90%, 80%);
  color: hsl(205, 90%, 15%);
  min-height: 100vh;
  padding-block: 5rem;
}

/* Typography */
/* Font size is base in minor third scale. */
h1 {
  font-size: 2.986rem;
}

h2 {
  font-size: 2.448rem;
}

h3 {
  font-size: 2.074rem;
}

h4 {
  font-size: 1.728rem;
}

h5 {
  font-size: 1.44rem;
}

h6 {
  font-size: 1.2rem;
}

small {
  font-size: 0.833rem;
}

/* Links */
a {
  color: hsl(205, 90%, 15%);
}

a:hover {
  text-decoration-color: hsl(0, 80%, 50%);
}

/* Card group styles */
.card-group {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-auto-rows: auto;
  gap: 1rem;
}

/* Card styles */
.card {
  border-radius: 0.75rem;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
  position: relative;
  background: hsl(205, 90%, 15%);
  color: hsl(200, 90%, 80%);
  overflow: hidden;
  transition: transform 200ms ease-in-out;
  isolation: isolate;
}

.card:hover {
  transform: scale(1.0125);
}

.card-content {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  padding: 1rem;
}

.card-title a {
  color: #fff;
}

.card-title a::after {
  display: block;
  content: "";
  position: absolute;
  inset: 0;
  z-index: 1;
}

.card-image {
  position: relative;
}

.card-image::after {
  display: block;
  content: "";
  width: 100%;
  height: 0;
  padding-top: calc(100% / 3 * 2);
}

.card-image img {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  object-fit: cover;
}

.card-footer {
  padding: calc((100% / 3 * 2) - 2.25rem) 1rem 1rem;
  display: flex;
  position: absolute;
  place-items: flex-end;
  align-items: flex-end;
  justify-content: flex-end;
  top: 0;
  right: 0;
  bottom: auto;
  left: 0;
}

.card-footer ul {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  padding: 0;
}

.card-footer ul li {
  border-radius: calc(0.75rem / 2);
  background: hsl(0, 80%, 50%);
  color: #fff;
  padding: 0.25rem 0.5rem;
  line-height: 1;
  font-weight: bold;
}

/* Horizontal card styles. */
@media screen and (width > 630px) {
  .card.horizontal {
    grid-column: span 2;
    display: flex;
  }

  .card.horizontal .card-image {
    height: 100%;
    width: 100%;
  }

  .card.horizontal .card-image::after {
    display: none;
  }

  .card.horizontal .card-image img {
    height: 100%;
  }

  .card.horizontal .card-footer {
    padding: 1rem;
    top: 0;
    right: 50%;
    bottom: 0;
    left: 0;
  }
}

/* Responsive card group layouts */
@media screen and (width <= 1000px) {
  .card-group {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (width <= 630px) {
  .card-group {
    grid-template-columns: 1fr;
  }
}

